--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,10 +1,3 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
-
 name: Java CI with Gradle
 
 on:
@@ -21,15 +14,22 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Java
-        run: echo "JAVA_HOME=$JAVA_HOME_21_X64" >> "$GITHUB_ENV"
+       The issue in this workflow is caused by a "Permission denied run: echo "JAVA_HOME=$JAVA_HOME_21_X64" >> "$G" error when attempting to execute `./gradlew` in theITHUB_ENV"
 
       - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v4
+        uses: grad `Build & Publish` step. This typically happens if thele/actions/setup-gradle@v4
         with:
           cache-disabled: true
 
-      - name: Validate Gradle Wrapper Integrity
-        uses: gradle/actions/wrapper-validation@v3
+      - name: Validate Gradle `gradlew` script does not have the executable permission set.
+
+ Wrapper Integrity
+        uses: gradle/actions/wrapper### Solution
+You need to ensure that the-validation@v3
+
+      # Add step to set execute permissions for gradlew
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
 
       - name: Build & Publish
         run: ./gradlew build
